# AutoChecklist

./: .env  .env.example  .gitignore  PulsePRD.md  README.md  _ANALYSIS.md  _INDEX.md  _ROOT_ANALYSIS.md  ecosystem.config.cjs  last_coco_client.py  manual_ci_prd.md  mira-web-api-doc-full.md  prd.md  pyproject.toml  recomandPRD.md  regression_config.yaml  testprd.md
analysis_docs/: _INDEX.md  pr20_template_classification_changelog.md
analysis_docs/tests/: _ANALYSIS.md
app/: _ANALYSIS.md  __init__.py  logging.py  main.py
app/api/: _ANALYSIS.md  benchmark_routes.py  file_routes.py  knowledge_routes.py  project_routes.py  routes.py  template_routes.py
app/clients/: _ANALYSIS.md  __init__.py  llm.py  mira_client.py
app/config/: _ANALYSIS.md  __init__.py  settings.py
app/domain/: _ANALYSIS.md  __init__.py  abstracted_reference_models.py  api_models.py  benchmark_models.py  case_models.py  checklist_models.py  checklist_models_ANALYSIS.md  checkpoint_models.py  document_models.py  file_models.py  mr_models.py  output_models.py  precondition_models.py  project_models.py  regression_models.py  research_models.py  run_state.py  state.py  template_models.py  xmind_models.py  xmind_reference_models.py
app/graphs/: _ANALYSIS.md  __init__.py  case_generation.py  main_workflow.py  output_delivery.py  (+1 more)
docs/: frontend-guidance-runs-files.md
scripts/: regression_eval.py  tiktok_cookie_injector.command
templates/: _ANALYSIS.md  brand_spp_consideration.yaml  consideration.yaml  template0.yaml
tests/: _ANALYSIS.md  conftest.py  test_draft_writer_concurrency.py  test_timing.py
(+275 files in other folders)
