[project]
name = "auto-checklist"
version = "0.1.0"
description = "Automated test checklist generation from PRD documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langgraph>=0.3.34",
    "lightrag-hku>=1.1.0",
    "openai>=1.68.2",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.1",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
