[tool.poetry]
name = "autochecklist"
version = "0.1.0"
description = ""
authors = ["sandaogouchen <sandaogouchen@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.13.1"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
