[tool.poetry]
name = "autochecklist"
version = "0.1.0"
description = "AutoChecklist project"
authors = ["sandaogouchen <143976836+sandaogouchen@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.13.1"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
